--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,80 @@
 .App {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #247BA0;
+}
+
+.wrapper {
+  width: 1000px;
+  display: flex;
+  flex-direction: column;
+  padding: 50px 40px;
+  border-radius: 10px;
+  box-shadow: 10px 20px 100px #555;
+  background-color: #ffffff;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+h1 {
   text-align: center;
+  width: 100%;
+  color: #111111;
+  font-weight: lighter;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
+label {
+  font-size: 0.8em;
+  margin-bottom: 0.25em;
+  color: #222;
+  font-weight: lighter;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+input {
+  padding: 10px 50px;
+  border-radius: 5px;
+  outline: lighter;
+  border: 1px solid #cfcfcf;
+}
+
+input::placeholder {
+  font-size: 1.2em;
+  font-weight: lighter;
+  color: #888;
+}
+
+.App {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.App {
+  background-color: #247BA0;
+  color: #111;
+  border: 2px solid #111;
+  width: 100%;
+  margin-top: 1em;
+  padding: 8px 0px;
+  font-size: 1em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  margin-bottom: 0.25em;
+}
+
+.App button {
+  color: #ffffff;
+  background-color: #247BA0;
+  font-weight: lighter;
 }
