--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,7 @@
   background-color: #ffffff;
 }
 
-form {
+.App {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -53,7 +53,7 @@ input::placeholder {
   color: #888;
 }
 
-.App {
+.Form {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -73,7 +73,7 @@ input::placeholder {
   margin-bottom: 0.25em;
 }
 
-.App button {
+.Form button {
   color: #ffffff;
   background-color: #247BA0;
   font-weight: lighter;
